# api-sample

./: Dockerfile  README.md  build_image.sh  pyproject.toml  requirements.txt  tox.ini
src/apisample/: main.py
src/apisample/api/: types.py
src/apisample/api/routers/: analyze.py  files.py  items.py
tests/api/: test_analyze.py  test_files.py
tests/data/: sample1.csv
