[tool.poetry]
name = "api-sample"
version = "0.1.0"
description = ""
authors = ["TkrUdagawa <tkr.udagawa.lab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
