[tool.poetry]
name = "apisample"
version = "0.1.0"
description = ""
authors = ["TkrUdagawa <tkr.udagawa.lab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
tox = "^3.25.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
